test/types/records/init/copy/initEqualsErrorMessage.good
initEqualsErrorMessage.chpl:3: In function 'test':
initEqualsErrorMessage.chpl:4: error: could not find a copy initializer ('init=') for type 'r' from type 'int(64)'
initEqualsErrorMessage.chpl:1: note: this candidate did not match: r.init=(other: r)
initEqualsErrorMessage.chpl:4: note: because call actual argument #1 with type int(64)
initEqualsErrorMessage.chpl:1: note: is passed to formal 'other: r'
