test/types/records/init/copy/initEqualsErrorMessage.chpl
record r { var x: int = 0; }

proc test() {
  var x: r = 0;
  return;
}
test();

